fix text not showing up in dark mode.

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -50,6 +50,8 @@ html.dark {
 
   --c-tip: #009400; //tip side color
   --c-tip-bg: #003100; //tip background color
+  --c-tip-title: #e2e2e2;
+  --c-tip-text: #e2e2e2;
 
   --c-bg:  #1b1b1d;//dark mode background
   --c-bg-navbar: #242526;//nav bar color
